Implement quotes#show

--- a/appsettings.json
+++ b/appsettings.json
@@ -1,4 +1,7 @@
 {
+  "ConnectionStrings": {
+    "BaseQuotes": "Data Source=localhost;Initial Catalog=QuotesExample;User ID=SA;Password=Str0ng@Password;"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
