--- a/linux-demo-api.csproj
+++ b/linux-demo-api.csproj
@@ -5,5 +5,10 @@
     <RootNamespace>linux_demo_api</RootNamespace>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Dapper" Version="2.0.78" />
+    <PackageReference Include="System.Data.SqlClient" Version="4.8.2" />
+  </ItemGroup>
+
 
 </Project>
